Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/UPrimitiveComponent.h

	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bOnlyOwnerSee_GET(UPrimitiveComponent* Ptr) { return Ptr->bOnlyOwnerSee; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bOnlyOwnerSee_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bOnlyOwnerSee = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_BoundsScale_GET(UPrimitiveComponent* Ptr) { return Ptr->BoundsScale; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_BoundsScale_SET(UPrimitiveComponent* Ptr, float Value) { Ptr->BoundsScale = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bOwnerNoSee_GET(UPrimitiveComponent* Ptr) { return Ptr->bOwnerNoSee; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bOwnerNoSee_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bOwnerNoSee = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bReceiveMobileCSMShadows_GET(UPrimitiveComponent* Ptr) { return Ptr->bReceiveMobileCSMShadows; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bReceiveMobileCSMShadows_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bReceiveMobileCSMShadows = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bReceivesDecals_GET(UPrimitiveComponent* Ptr) { return Ptr->bReceivesDecals; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bReceivesDecals_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bReceivesDecals = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bRenderCustomDepth_GET(UPrimitiveComponent* Ptr) { return Ptr->bRenderCustomDepth; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bRenderCustomDepth_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bRenderCustomDepth = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bRenderInMainPass_GET(UPrimitiveComponent* Ptr) { return Ptr->bRenderInMainPass; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bRenderInMainPass_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bRenderInMainPass = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bReplicatePhysicsToAutonomousProxy_GET(UPrimitiveComponent* Ptr) { return Ptr->bReplicatePhysicsToAutonomousProxy; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bReplicatePhysicsToAutonomousProxy_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bReplicatePhysicsToAutonomousProxy = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bReturnMaterialOnMove_GET(UPrimitiveComponent* Ptr) { return Ptr->bReturnMaterialOnMove; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bReturnMaterialOnMove_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bReturnMaterialOnMove = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bSelectable_GET(UPrimitiveComponent* Ptr) { return Ptr->bSelectable; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bSelectable_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bSelectable = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bSelfShadowOnly_GET(UPrimitiveComponent* Ptr) { return Ptr->bSelfShadowOnly; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bSelfShadowOnly_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bSelfShadowOnly = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bSingleSampleShadowFromStationaryLights_GET(UPrimitiveComponent* Ptr) { return Ptr->bSingleSampleShadowFromStationaryLights; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bSingleSampleShadowFromStationaryLights_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bSingleSampleShadowFromStationaryLights = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bTraceComplexOnMove_GET(UPrimitiveComponent* Ptr) { return Ptr->bTraceComplexOnMove; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bTraceComplexOnMove_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bTraceComplexOnMove = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bTreatAsBackgroundForOcclusion_GET(UPrimitiveComponent* Ptr) { return Ptr->bTreatAsBackgroundForOcclusion; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bTreatAsBackgroundForOcclusion_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bTreatAsBackgroundForOcclusion = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bUseAsOccluder_GET(UPrimitiveComponent* Ptr) { return Ptr->bUseAsOccluder; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bUseAsOccluder_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bUseAsOccluder = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bUseEditorCompositing_GET(UPrimitiveComponent* Ptr) { return Ptr->bUseEditorCompositing; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bUseEditorCompositing_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bUseEditorCompositing = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bUseViewOwnerDepthPriorityGroup_GET(UPrimitiveComponent* Ptr) { return Ptr->bUseViewOwnerDepthPriorityGroup; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bUseViewOwnerDepthPriorityGroup_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bUseViewOwnerDepthPriorityGroup = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bVisibleInRayTracing_GET(UPrimitiveComponent* Ptr) { return Ptr->bVisibleInRayTracing; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bVisibleInRayTracing_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bVisibleInRayTracing = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_bVisibleInReflectionCaptures_GET(UPrimitiveComponent* Ptr) { return Ptr->bVisibleInReflectionCaptures; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_bVisibleInReflectionCaptures_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->bVisibleInReflectionCaptures = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_CachedMaxDrawDistance_GET(UPrimitiveComponent* Ptr) { return Ptr->CachedMaxDrawDistance; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_CachedMaxDrawDistance_SET(UPrimitiveComponent* Ptr, float Value) { Ptr->CachedMaxDrawDistance = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_CastShadow_GET(UPrimitiveComponent* Ptr) { return Ptr->CastShadow; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_CastShadow_SET(UPrimitiveComponent* Ptr, uint8 Value) { Ptr->CastShadow = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_CustomDepthStencilValue_GET(UPrimitiveComponent* Ptr) { return Ptr->CustomDepthStencilValue; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_CustomDepthStencilValue_SET(UPrimitiveComponent* Ptr, int32 Value) { Ptr->CustomDepthStencilValue = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_CustomDepthStencilWriteMask_GET(UPrimitiveComponent* Ptr) { return Ptr->CustomDepthStencilWriteMask; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_CustomDepthStencilWriteMask_SET(UPrimitiveComponent* Ptr, ERendererStencilMask Value) { Ptr->CustomDepthStencilWriteMask = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_LastRenderTime_GET(UPrimitiveComponent* Ptr) { return Ptr->LastRenderTime; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_LastRenderTime_SET(UPrimitiveComponent* Ptr, float Value) { Ptr->LastRenderTime = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_LastRenderTimeOnScreen_GET(UPrimitiveComponent* Ptr) { return Ptr->LastRenderTimeOnScreen; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_LastRenderTimeOnScreen_SET(UPrimitiveComponent* Ptr, float Value) { Ptr->LastRenderTimeOnScreen = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_LastSubmitTime_GET(UPrimitiveComponent* Ptr) { return Ptr->LastSubmitTime; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_LastSubmitTime_SET(UPrimitiveComponent* Ptr, float Value) { Ptr->LastSubmitTime = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_LDMaxDrawDistance_GET(UPrimitiveComponent* Ptr) { return Ptr->LDMaxDrawDistance; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_LDMaxDrawDistance_SET(UPrimitiveComponent* Ptr, float Value) { Ptr->LDMaxDrawDistance = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_LightingChannels_GET(UPrimitiveComponent* Ptr) { return (INT_PTR)&(Ptr->LightingChannels); }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_LightingChannels_SET(UPrimitiveComponent* Ptr, INT_PTR Value) { Ptr->LightingChannels = *(FLightingChannels*)Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_LightmapType_GET(UPrimitiveComponent* Ptr) { return Ptr->LightmapType; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_LightmapType_SET(UPrimitiveComponent* Ptr, ELightmapType Value) { Ptr->LightmapType = Value; }
	
	DOTNET_EXPORT auto E_PROP_UPrimitiveComponent_LpvBiasMultiplier_GET(UPrimitiveComponent* Ptr) { return Ptr->LpvBiasMultiplier; }
	DOTNET_EXPORT void E_PROP_UPrimitiveComponent_LpvBiasMultiplier_SET(UPrimitiveComponent* Ptr, float Value) { Ptr->LpvBiasMultiplier = Value; }